// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for error alerts 1`] = `
<div
  className="usa-alert usa-alert--error usa-alert--no-icon"
  role="alert"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      body
    </p>
  </div>
</div>
`;

exports[`should match snapshot for info alerts 1`] = `
<div
  className="usa-alert usa-alert--info usa-alert--no-icon"
  role="alert"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      body
    </p>
  </div>
</div>
`;

exports[`should match snapshot for success alerts 1`] = `
<div
  className="usa-alert usa-alert--success usa-alert--no-icon"
  role="alert"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      body
    </p>
  </div>
</div>
`;

exports[`should match snapshot for warning alerts 1`] = `
<div
  className="usa-alert usa-alert--warning usa-alert--no-icon"
  role="alert"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      body
    </p>
  </div>
</div>
`;
